src/pages/Videos.css
.all-videos {
    align-content: center;
    justify-content: center;
    width: 30vw;
    margin-top: 10rem;
}

.video-card {
    background-color: transparent;
    padding: 1rem;
    transition: 0.3s;
    border-radius: 15px;
}

.video-card:hover {
    background-color: #8296b7;
}

.video-iframe {
    width: 100%;
    height: auto;
    aspect-ratio: 16/9;
}

.video-iframe-horizontal {
    width: 100%;
    height: auto;
    aspect-ratio: 16/9;
}

.video-iframe-vertical {
    width: 50%;
    height: auto;
    aspect-ratio: 9/16;
}

.video-iframe-square {
    width: 100%;
    height: auto;
    aspect-ratio: 1/1;
}

  @media (max-width: 768px) {
    .all-videos {
        width: 85vw;
    }

    .video-iframe-vertical {
        width: 100%;
    }
  }

